packages/edxml-test-corpus/edxml-test-corpus-3.0.0.dev2.tar.gz/edxml-test-corpus-3.0.0.dev2/edxml_test_corpus/tests/invalid/ontology/relation-inter-source-is-no-concept.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if an inter-concept relation having a source property
which is not associated with a concept is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="datetime"/>
    </objecttypes>
    <concepts>
      <concept name="a" description="a" display-name-singular="a" display-name-plural="a" version="1"/>
      <concept name="b" description="b" display-name-singular="b" display-name-plural="b" version="1"/>
    </concepts>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match"/>
          <property name="b" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match">
            <property-concept name="b" confidence="8" cnp="8"/>
          </property>
        </properties>
        <relations>
          <inter property1="a" property2="b" concept1="a" concept2="b" directed="false" description="[[a]] linked to [[b]]" confidence="2" predicate="linked"/>
        </relations>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
